--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="18dp"
-    android:layout_marginTop="18dp"
+    android:layout_marginTop="12dp"
     android:layout_marginEnd="18dp"
     android:clickable="true"
     app:cardBackgroundColor="@color/cards_bg_color"
@@ -15,7 +15,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp">
+        android:padding="14dp">
 
         <TextView
             android:id="@+id/transactionTitle"
@@ -79,14 +79,30 @@
                 android:textStyle="bold"
                 tools:text="- 90.0 lei" />
 
-            <TextView
-                android:id="@+id/transactionCategory"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:text="Category not provided"
-                android:textSize="12sp"
-                tools:text="Transport" />
+                android:layout_gravity="center_horizontal"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/transactionCategoryImage"
+                    android:layout_width="18dp"
+                    android:layout_height="18dp"
+                    android:contentDescription="@string/user_profile_picture"
+                    tools:src="@drawable/ic_round_wine_bar_24" />
+
+                <TextView
+                    android:id="@+id/transactionCategory"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="4dp"
+                    android:maxLines="1"
+                    android:text="Category not provided"
+                    android:textSize="12sp"
+                    tools:text="Transport" />
+            </LinearLayout>
         </LinearLayout>
 
     </RelativeLayout>
