--- a/app/src/main/res/layout/item_transaction_small.xml
+++ b/app/src/main/res/layout/item_transaction_small.xml
@@ -69,13 +69,30 @@
             android:textStyle="bold"
             tools:text="- 90.0 lei" />
 
-        <TextView
-            android:id="@+id/transactionCategory"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:textSize="10sp"
-            tools:text="Transport" />
+            android:layout_gravity="center_horizontal"
+            android:orientation="horizontal">
+            <ImageView
+                android:id="@+id/transactionCategoryImage"
+                android:layout_width="14dp"
+                android:layout_height="14dp"
+                android:contentDescription="@string/user_profile_picture"
+                tools:src="@drawable/ic_round_wine_bar_24" />
+
+            <TextView
+                android:id="@+id/transactionCategory"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="4dp"
+                android:maxLines="1"
+                android:text="Category not provided"
+                android:textSize="10sp"
+                tools:text="Transport" />
+        </LinearLayout>
+
     </LinearLayout>
 
 </RelativeLayout>
