--- a/app/src/main/res/layout/item_transaction_small.xml
+++ b/app/src/main/res/layout/item_transaction_small.xml
@@ -72,8 +72,9 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
+            android:layout_gravity="center_horizontal|end"
             android:orientation="horizontal">
+
             <ImageView
                 android:id="@+id/transactionCategoryImage"
                 android:layout_width="14dp"
