--- a/app/src/main/res/layout/fragment_analytics.xml
+++ b/app/src/main/res/layout/fragment_analytics.xml
@@ -244,7 +244,7 @@
                                 android:checkable="true"
                                 android:clickable="true"
                                 android:focusable="true"
-                                android:text="@string/monthly"
+                                android:text="This Year"
                                 app:chipBackgroundColor="@color/bar_details_chip_state_list"
                                 app:chipMinTouchTargetSize="0dp"
                                 app:chipStrokeWidth="0dp" />
