--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -518,7 +518,7 @@
         android:id="@+id/bottomAppBar"
         style="@style/Widget.Material3.BottomAppBar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:layout_gravity="bottom"
         app:fabAlignmentMode="end"
         app:fabAnchorMode="cradle"
@@ -530,10 +530,11 @@
         app:removeEmbeddedFabElevation="false" >
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
+            app:labelVisibilityMode="unlabeled"
             android:id="@+id/bottomNavView"
             android:layout_marginEnd="88dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             app:menu="@menu/menu"/>
     </com.google.android.material.bottomappbar.BottomAppBar>
 
