show person info dialog on homescreen

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,10 +11,10 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="18dp">
+        android:layout_height="match_parent">
 
         <com.google.android.material.card.MaterialCardView
+            android:layout_marginTop="18dp"
             android:id="@+id/walletsCard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
