added more categories

--- a/app/src/main/res/layout/fragment_add_transaction.xml
+++ b/app/src/main/res/layout/fragment_add_transaction.xml
@@ -64,185 +64,189 @@
 
     </com.google.android.material.appbar.MaterialToolbar>
 
-
-    <RelativeLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_above="@id/saveTransactionBtn"
         android:layout_below="@id/toolbar">
 
-        <com.google.android.material.chip.ChipGroup
-            android:id="@+id/chipLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="18dp"
-            app:chipSpacingHorizontal="18dp"
-            app:selectionRequired="true"
-            app:singleSelection="true">
-
-            <com.google.android.material.chip.Chip
-                android:id="@+id/incomeChip"
-                style="@style/Widget.Material3.Chip.Filter.Elevated"
-                android:layout_width="wrap_content"
-                android:layout_height="60dp"
-                android:elevation="1dp"
-                android:text="Income"
-                android:textSize="18sp"
-                app:textEndPadding="18dp"
-                app:textStartPadding="18dp" />
-
-            <com.google.android.material.chip.Chip
-                android:id="@+id/expenseChip"
-                style="@style/Widget.Material3.Chip.Filter.Elevated"
-                android:layout_width="wrap_content"
-                android:layout_height="60dp"
-                android:checked="true"
-                android:elevation="1dp"
-                android:text="Expense"
-                android:textSize="18sp"
-                app:textEndPadding="18dp"
-                app:textStartPadding="18dp" />
-        </com.google.android.material.chip.ChipGroup>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/titleLayout"
-            style="@style/Widget.Material3.TextInputLayout.FilledBox"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/chipLayout"
-            android:layout_marginStart="18dp"
-            android:layout_marginTop="18dp"
-            android:layout_marginEnd="18dp"
-            android:hint="Transaction Title"
-            app:boxBackgroundColor="@color/cards_bg_color"
-            app:boxCornerRadiusBottomEnd="18dp"
-            app:boxCornerRadiusBottomStart="18dp"
-            app:boxCornerRadiusTopEnd="18dp"
-            app:boxCornerRadiusTopStart="18dp"
-            app:boxStrokeWidth="0dp"
-            app:boxStrokeWidthFocused="0dp">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/transactionTitle"
-                android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:focusedByDefault="true"
-                android:imeOptions="actionNext"
-                android:inputType="textCapWords"
-                android:singleLine="true" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/amountInputLayout"
-            style="@style/Widget.Material3.TextInputLayout.FilledBox"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/titleLayout"
-            android:layout_marginStart="18dp"
-            android:layout_marginTop="18sp"
-            android:layout_marginEnd="18dp"
-            android:hint="Amount"
-            app:boxBackgroundColor="@color/cards_bg_color"
-            app:boxCornerRadiusBottomEnd="18dp"
-            app:boxCornerRadiusBottomStart="18dp"
-            app:boxCornerRadiusTopEnd="18dp"
-            app:boxCornerRadiusTopStart="18dp"
-            app:boxStrokeWidth="0dp"
-            app:boxStrokeWidthFocused="0dp"
-            app:placeholderText="0.00">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/transactionAmount"
-                android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:imeOptions="actionDone"
-                android:inputType="numberDecimal"
-                android:maxLines="1"
-                android:singleLine="true"
-                android:textSize="22sp" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <TextView
-            android:id="@+id/selectedTextDummy"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/amountInputLayout"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="18dp"
-            android:text="Expense Category"
-            android:textSize="12sp" />
-
-        <TextView
-            android:id="@+id/pleaseSelectTv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/amountInputLayout"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="18dp"
-            android:text="Please select a category first"
-            android:textColor="@android:color/holo_red_dark"
-            android:textSize="18sp"
-            android:visibility="gone"
-            tools:visibility="visible" />
-
         <RelativeLayout
-            android:id="@+id/transactionCategoryLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/selectedTextDummy"
-            android:layout_marginStart="22dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="22dp"
-            android:clickable="true"
-            android:minHeight="40dp">
+            android:layout_height="match_parent">
 
             <com.google.android.material.chip.ChipGroup
-                android:id="@+id/categoryChipGroup"
+                android:id="@+id/chipLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="18dp"
+                app:chipSpacingHorizontal="18dp"
+                app:selectionRequired="true"
+                app:singleSelection="true">
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/incomeChip"
+                    style="@style/Widget.Material3.Chip.Filter.Elevated"
+                    android:layout_width="wrap_content"
+                    android:layout_height="60dp"
+                    android:elevation="1dp"
+                    android:text="Income"
+                    android:textSize="18sp"
+                    app:textEndPadding="18dp"
+                    app:textStartPadding="18dp" />
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/expenseChip"
+                    style="@style/Widget.Material3.Chip.Filter.Elevated"
+                    android:layout_width="wrap_content"
+                    android:layout_height="60dp"
+                    android:checked="true"
+                    android:elevation="1dp"
+                    android:text="Expense"
+                    android:textSize="18sp"
+                    app:textEndPadding="18dp"
+                    app:textStartPadding="18dp" />
+            </com.google.android.material.chip.ChipGroup>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/titleLayout"
+                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:chipSpacingHorizontal="8dp"
-                app:chipSpacingVertical="1dp"
-                app:selectionRequired="true"
-                app:singleSelection="true" />
+                android:layout_below="@id/chipLayout"
+                android:layout_marginStart="18dp"
+                android:layout_marginTop="18dp"
+                android:layout_marginEnd="18dp"
+                android:hint="Transaction Title"
+                app:boxBackgroundColor="@color/cards_bg_color"
+                app:boxCornerRadiusBottomEnd="18dp"
+                app:boxCornerRadiusBottomStart="18dp"
+                app:boxCornerRadiusTopEnd="18dp"
+                app:boxCornerRadiusTopStart="18dp"
+                app:boxStrokeWidth="0dp"
+                app:boxStrokeWidthFocused="0dp">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/transactionTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="70dp"
+                    android:focusedByDefault="true"
+                    android:imeOptions="actionNext"
+                    android:inputType="textCapWords"
+                    android:singleLine="true" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/amountInputLayout"
+                style="@style/Widget.Material3.TextInputLayout.FilledBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/titleLayout"
+                android:layout_marginStart="18dp"
+                android:layout_marginTop="18sp"
+                android:layout_marginEnd="18dp"
+                android:hint="Amount"
+                app:boxBackgroundColor="@color/cards_bg_color"
+                app:boxCornerRadiusBottomEnd="18dp"
+                app:boxCornerRadiusBottomStart="18dp"
+                app:boxCornerRadiusTopEnd="18dp"
+                app:boxCornerRadiusTopStart="18dp"
+                app:boxStrokeWidth="0dp"
+                app:boxStrokeWidthFocused="0dp"
+                app:placeholderText="0.00">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/transactionAmount"
+                    android:layout_width="match_parent"
+                    android:layout_height="70dp"
+                    android:imeOptions="actionDone"
+                    android:inputType="numberDecimal"
+                    android:maxLines="1"
+                    android:singleLine="true"
+                    android:textSize="22sp" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <TextView
+                android:id="@+id/selectedTextDummy"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/amountInputLayout"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="18dp"
+                android:text="Expense Category"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/pleaseSelectTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/amountInputLayout"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="18dp"
+                android:text="Please select a category first"
+                android:textColor="@android:color/holo_red_dark"
+                android:textSize="18sp"
+                android:visibility="gone"
+                tools:visibility="visible" />
+
+            <RelativeLayout
+                android:id="@+id/transactionCategoryLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/selectedTextDummy"
+                android:layout_marginStart="22dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="22dp"
+                android:clickable="true"
+                android:minHeight="40dp">
+
+                <com.google.android.material.chip.ChipGroup
+                    android:id="@+id/categoryChipGroup"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:chipSpacingHorizontal="8dp"
+                    app:chipSpacingVertical="1dp"
+                    app:selectionRequired="true"
+                    app:singleSelection="true" />
+
+            </RelativeLayout>
+
+
+            <com.google.android.material.switchmaterial.SwitchMaterial
+                android:id="@+id/cashSwitch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/transactionCategoryLayout"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="8dp"
+                android:text="Cash transaction" />
+
+            <DatePicker
+                android:id="@+id/simpleDatePicker"
+                android:layout_width="match_parent"
+                android:layout_height="140dp"
+                android:layout_below="@id/cashSwitch"
+                android:layout_centerHorizontal="true"
+                android:layout_marginStart="18dp"
+                android:layout_marginEnd="18dp"
+                android:calendarViewShown="false"
+                android:datePickerMode="spinner"
+                android:theme="@style/DialogTheme" />
 
         </RelativeLayout>
 
+    </ScrollView>
 
-        <com.google.android.material.switchmaterial.SwitchMaterial
-            android:id="@+id/cashSwitch"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/transactionCategoryLayout"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="8dp"
-            android:text="Cash transaction" />
-
-        <DatePicker
-            android:id="@+id/simpleDatePicker"
-            android:layout_width="match_parent"
-            android:layout_height="140dp"
-            android:layout_below="@id/cashSwitch"
-            android:layout_centerHorizontal="true"
-            android:layout_marginStart="18dp"
-            android:layout_marginEnd="18dp"
-            android:calendarViewShown="false"
-            android:datePickerMode="spinner"
-            android:theme="@style/DialogTheme" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/saveTransactionBtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginStart="18dp"
-            android:layout_marginEnd="18dp"
-            android:layout_marginBottom="38dp"
-            android:text="Save Transaction"
-            app:cornerRadius="10dp" />
-
-    </RelativeLayout>
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/saveTransactionBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="18dp"
+        android:text="Save Transaction"
+        app:cornerRadius="10dp" />
 
 </RelativeLayout>
