Analytics statistics doc minimum usage achieved

--- a/app/src/main/res/layout/fragment_analytics.xml
+++ b/app/src/main/res/layout/fragment_analytics.xml
@@ -222,7 +222,7 @@
                             app:singleSelection="true">
 
                             <com.google.android.material.chip.Chip
-                                android:id="@+id/allMonthChip"
+                                android:id="@+id/thisMonthChip"
                                 style="@style/Widget.Material3.Chip.Assist"
                                 android:layout_width="wrap_content"
                                 android:layout_height="32dp"
@@ -237,14 +237,14 @@
 
 
                             <com.google.android.material.chip.Chip
-                                android:id="@+id/monthlyChip"
+                                android:id="@+id/thisYearChip"
                                 style="@style/Widget.Material3.Chip.Assist"
                                 android:layout_width="wrap_content"
                                 android:layout_height="32dp"
                                 android:checkable="true"
                                 android:clickable="true"
                                 android:focusable="true"
-                                android:text="This Year"
+                                android:text="@string/this_year"
                                 app:chipBackgroundColor="@color/bar_details_chip_state_list"
                                 app:chipMinTouchTargetSize="0dp"
                                 app:chipStrokeWidth="0dp" />
