--- a/app/src/main/res/layout/fragment_add_transaction.xml
+++ b/app/src/main/res/layout/fragment_add_transaction.xml
@@ -32,6 +32,7 @@
                 app:iconSize="25dp" />
 
             <TextView
+                android:id="@+id/addTransToolbarTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
