--- a/app/src/main/res/layout/item_transaction_small.xml
+++ b/app/src/main/res/layout/item_transaction_small.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,92 +8,98 @@
     android:layout_marginTop="8dp"
     android:layout_marginEnd="12dp"
     android:clickable="true"
-    android:padding="8dp"
     app:cardCornerRadius="@dimen/main_cards_corner_radius"
     app:strokeWidth="0dp">
 
-    <ImageView
-        android:id="@+id/transactionImage"
-        android:layout_width="42dp"
-        android:layout_height="42dp"
-        android:layout_centerVertical="true"
-        android:contentDescription="@string/user_profile_picture"
-        android:src="@drawable/ic_baseline_person_24" />
+    <RelativeLayout
+        android:padding="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_toStartOf="@id/moneyLayout"
-        android:layout_toEndOf="@id/transactionImage"
-        android:gravity="center_vertical"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/transactionPerson"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="Daniela" />
-
-        <TextView
-            android:id="@+id/transactionTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="12sp"
-            android:textStyle="normal"
-            tools:text="Transaction Title " />
-
-        <TextView
-            android:id="@+id/transactionDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="10sp"
-            tools:text="Fri, Aug 12, 15:48" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/moneyLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/transactionAmount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:textColor="#D50000"
-            android:textSize="12sp"
-            android:textStyle="bold"
-            tools:text="- 90.0 lei" />
+        <ImageView
+            android:id="@+id/transactionImage"
+            android:layout_width="42dp"
+            android:layout_height="42dp"
+            android:layout_centerVertical="true"
+            android:contentDescription="@string/user_profile_picture"
+            android:src="@drawable/ic_baseline_person_24" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal|end"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/transactionCategoryImage"
-                android:layout_width="14dp"
-                android:layout_height="14dp"
-                android:contentDescription="@string/user_profile_picture"
-                tools:src="@drawable/ic_round_wine_bar_24" />
+            android:layout_marginStart="12dp"
+            android:layout_toStartOf="@id/moneyLayout"
+            android:layout_toEndOf="@id/transactionImage"
+            android:gravity="center_vertical"
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/transactionCategory"
+                android:id="@+id/transactionPerson"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginStart="4dp"
-                android:maxLines="1"
-                android:text="Category not provided"
+                tools:text="Daniela" />
+
+            <TextView
+                android:id="@+id/transactionTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="12sp"
+                android:textStyle="normal"
+                tools:text="Transaction Title " />
+
+            <TextView
+                android:id="@+id/transactionDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:textSize="10sp"
-                tools:text="Transport" />
+                tools:text="Fri, Aug 12, 15:48" />
         </LinearLayout>
 
-    </LinearLayout>
+        <LinearLayout
+            android:id="@+id/moneyLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:orientation="vertical">
 
-</RelativeLayout>
+            <TextView
+                android:id="@+id/transactionAmount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:textColor="#D50000"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                tools:text="- 90.0 lei" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal|end"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/transactionCategoryImage"
+                    android:layout_width="14dp"
+                    android:layout_height="14dp"
+                    android:contentDescription="@string/user_profile_picture"
+                    tools:src="@drawable/ic_round_wine_bar_24" />
+
+                <TextView
+                    android:id="@+id/transactionCategory"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="4dp"
+                    android:maxLines="1"
+                    android:text="Category not provided"
+                    android:textSize="10sp"
+                    tools:text="Transport" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </RelativeLayout>
+
+</com.google.android.material.card.MaterialCardView>
