--- a/app/src/main/res/layout/fragment_analytics.xml
+++ b/app/src/main/res/layout/fragment_analytics.xml
@@ -268,6 +268,21 @@
                 android:layoutAnimation="@anim/layout_animation_fall_down"
                 tools:itemCount="8"
                 tools:listitem="@layout/item_expense_category" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:visibility="gone"
+                tools:visibility="visible"
+                android:id="@+id/transactionsRv"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@id/barChartCard"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="18dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:layoutAnimation="@anim/layout_animation_fall_down"
+                tools:itemCount="8"
+                tools:listitem="@layout/item_transaction" />
         </RelativeLayout>
 
     </androidx.core.widget.NestedScrollView>
