--- a/app/src/main/res/layout/item_transaction_small.xml
+++ b/app/src/main/res/layout/item_transaction_small.xml
@@ -8,13 +8,14 @@
     android:layout_marginTop="8dp"
     android:layout_marginEnd="12dp"
     android:clickable="true"
+    app:cardBackgroundColor="@color/cards_bg_color"
     app:cardCornerRadius="@dimen/main_cards_corner_radius"
     app:strokeWidth="0dp">
 
     <RelativeLayout
-        android:padding="8dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="8dp">
 
         <ImageView
             android:id="@+id/transactionImage"
