fix add trans fragment toolbar title

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -58,6 +58,9 @@
             android:name="transaction"
             app:argType="com.rokudo.xpense.models.Transaction"
             app:nullable="true" />
+        <argument
+            android:name="editMode"
+            app:argType="boolean" />
     </fragment>
     <fragment
         android:id="@+id/listTransactionsFragment"
